--- a/css/style.css
+++ b/css/style.css
@@ -228,3 +228,47 @@ body {
     margin-bottom: 95px;
 }
 
+.benefits {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--black);
+}
+
+.benefits__list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.benefits__item {
+    max-width: 360px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.benefits__item-img {
+    margin-top: 103px;
+    margin-bottom: 19px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.benefits__item-title {
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--white-text);
+    margin-bottom: 16px;
+}
+
+.benefits__item-desc {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #FBFBFB;
+    margin-bottom: 104px;
+}
