--- a/css/style.css
+++ b/css/style.css
@@ -272,3 +272,121 @@ body {
     color: #FBFBFB;
     margin-bottom: 104px;
 }
+
+.footer_wrp {
+    /*вот тут помучился, не факт что оптимально но лучше не придумал*/
+    background: linear-gradient(rgba(244, 244, 244, 0.7), rgba(244, 244, 244, 0.7)),
+    url("../img/footer_background.jpg") center/cover;
+    background-blend-mode: color;
+    min-height: 448px;
+}
+
+.footer__info {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer__info-item{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.footer__info-img {
+    padding-top: 97px;
+    width: 96px;
+    align-self: center;
+}
+
+.footer__info-text {
+    padding-top: 30px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    width: 360px;
+}
+
+.footer__info-text_italic {
+    font-style: italic;
+}
+
+.footer__info-subscribetitle {
+    padding-top: 150px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 167.2%;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.footer__info-subscribetext {
+    font-size: 18px;
+    line-height: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: normal;
+    padding-bottom: 32px;
+}
+
+.footer__info-form {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__info-input {
+    height: 49px;
+    width: 256px;
+    border-radius: 20px 0 0 20px;
+    /* Rounded Rectangle 5 в макете - вообще не понял что за измерение... подогнал на глаз*/
+    background: #E1E1E1;
+    border: 0;
+}
+
+.footer__info-input::placeholder {
+    padding-left: 22px;
+    color: #222224;
+    opacity: 0.67;
+}
+
+.footer__info-button {
+    border-radius: 0 20px 20px 0;
+    background: #F16D7F;
+    border: 0;
+    color: #FFFFFF;
+    width: 100px;
+}
+
+.footer_copyright {
+    background-color: var(--black);
+}
+
+.footer_copyright_wrp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer_copyright-text {
+    color: var(--white-text);
+    font-size: 16px;
+    line-height: 19px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.footer_copyright-list{
+    display: flex;
+    align-items: center;
+}
+
+.footer_copyright-item {
+    background-color: #FFFFFF;
+    width: 32px;
+    height: 32px;
+    margin: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
