--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
 .container {
     width: 1140px;
     margin: 0 auto;
+    position: relative;
 }
 
 .header {
@@ -42,13 +43,79 @@ body {
     margin: 0 41px 0 0;
 }
 
+.header__logo:hover,
+.header__logo:focus {
+    opacity: 0.5;
+    cursor: pointer;
+    outline: none;
+}
+
+.header__logo:active {
+    opacity: 0.7;
+}
+
+.header__search{
+    display: flex;
+    align-items: center;
+}
+
+.header__search-group{
+    display: flex;
+}
+
+.header__search-form {
+    display: none;
+}
+
+.header__search:hover .header__search-form,
+.header__search:focus .header__search-form,
+.header__search:active .header__search-form {
+    display: block;
+}
+
+.header__search:hover .header__search-img,
+.header__search:focus .header__search-img,
+.header__search:active .header__search-img {
+    display: none;
+}
+
 .header__button {
     background-color: transparent;
     border: 0;
 }
 
+.icon{
+    fill: #E8E8E8;
+}
+
+.header__button:hover,
+.header__button:active,
+.header__button:focus {
+    cursor: pointer;
+    outline: none;
+}
+
+.header__button:hover .icon,
+.header__button:active .icon,
+.header__button:focus .icon {
+    fill: var(--pink-text);
+}
+
 .header__link {
     margin: 0 0 0 33px;
+}
+
+.header__link:hover,
+.header__link:active,
+.header__link:focus {
+    cursor: pointer;
+    outline: none;
+}
+
+.header__link:hover .icon,
+.header__link:active .icon,
+.header__link:focus .icon {
+    fill: var(--pink-text);
 }
 
 .header__wrp {
@@ -60,7 +127,77 @@ body {
 
 .header__menu {
     display: none;
+    position: absolute;
+    width: 232px;
+    height: 764px;
+    top: 100%;
+    right: -232px;
+    background: white;
+    padding-left: 32px;
+    -webkit-box-shadow: -13px 13px 11px -7px rgba(34, 60, 80, 0.38);
+    -moz-box-shadow: -13px 13px 11px -7px rgba(34, 60, 80, 0.38);
+    box-shadow: -13px 13px 11px -7px rgba(34, 60, 80, 0.38);
 }
+
+.header__button:hover +.header__menu,
+.header__button:active +.header__menu,
+.header__button:focus +.header__menu {
+    display: block;
+}
+
+.header-menu:hover {
+    display: block;
+}
+
+.header__menu-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    padding-top: 37px;
+}
+
+.menu-sub-item__title {
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
+    color: var(--pink-text);
+    font-style: normal;
+    font-weight: normal;
+    padding-top: 24px;
+    margin-bottom: 12px;
+}
+
+.menu-sub-item__list {
+    padding-left: 12px;
+}
+
+.menu-sub-item__item-link {
+    margin-top: 11px;
+}
+
+.menu-sub-item__item-link:hover,
+.menu-sub-item__item-link:active,
+.menu-sub-item__item-link:focus {
+    cursor: pointer;
+    outline: none;
+    background-color: var(--pink-text);
+}
+
+.menu__link {
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+}
+
+.menu-sub-item__item-link:hover .menu__link,
+.menu-sub-item__item-link:active .menu__link,
+.menu-sub-item__item-link:focus .menu__link {
+    color: var(--black);
+}
+
 
 .brand {
     display: flex;
