--- a/css/style.css
+++ b/css/style.css
@@ -327,10 +327,10 @@ body {
     background-color: var(--milk-background);
 }
 .products__item-img {
-    margin-bottom: 23px;
 }
 
 .products__item-title {
+    margin-top: 23px;
     font-size: 13px;
     line-height: 16px;
     color: var(--black);
@@ -357,12 +357,79 @@ body {
     line-height: 19px;
 }
 
+.products__item-wrapper {
+    position: relative;
+}
+
+.products__item-overlay {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+}
+
+.products__item-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid var(--white-text);
+    background: none;
+    margin: 0;
+    padding: 0;
+}
+
+.products__item-button_icon {
+    fill: var(--white-text);
+    width: 26px;
+    height: 24px;
+    padding: 8px 0 8px 8px;
+}
+
+.products__item-button_text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: var(--white-text);
+    padding: 12px;
+}
+
+.products__item-button,
+.products__item-overlay {
+    display: none;
+}
+
+.products__item:hover .products__item-overlay,
+.products__item:active .products__item-overlay,
+.products__item:focus .products__item-overlay {
+    display: block;
+}
+
+.products__item:hover .products__item-button,
+.products__item:active .products__item-button,
+.products__item:focus .products__item-button {
+    display: flex;
+}
+
 .products__button{
     border: 1px solid var(--pink-text);
     background-color: white;
     padding: 14px 38px;
     color: var(--pink-text);
     margin-bottom: 95px;
+}
+
+.products__button:hover,
+.products__button:active,
+.products__button:focus {
+    background: var(--pink-text);
+    border: 1px solid var(--pink-text);
+    color: var(--white-text);
 }
 
 .benefits {
