--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,3 +5,5 @@ $white-text: #FFFFFF;
 $grey-text: #9F9F9F;
 $dark_grey-text: #5D5D5D;
 $milk-background: #F8F8F8;
+$tablet-width: 1599px;
+$mobile-width: 767px;
