--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,12 @@
-@import './variables';
-@import './mixins';
-@import './reset';
-@import './general';
-@import './blocks/header.scss';
-@import './blocks/brand';
-@import './blocks/sales';
-@import './blocks/products';
-@import './blocks/_benefits';
-@import './blocks/_footer';
-@import './blocks/_registration';
+@import './_variables.scss';
+@import './_mixins.scss';
+@import './_reset.scss';
+@import './_general.scss';
+@import './blocks/_header.scss';
+@import './blocks/_brand.scss';
+@import './blocks/_sales.scss';
+@import './blocks/_products.scss';
+@import './blocks/_benefits.scss';
+@import './blocks/_footer.scss';
+@import './blocks/_registration.scss';
+@import "./blocks/_menu-sub-item.scss";
