--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -21,3 +21,15 @@ body {
     margin: 0 auto;
     position: relative;
 }
+
+@media (max-width: $tablet-width) {
+    .container {
+        width: 92%;
+    }
+}
+
+@media (max-width: $mobile-width) {
+    .container {
+        width: 91%;
+    }
+}
