--- a/scss/blocks/_menu-sub-item.scss
+++ b/scss/blocks/_menu-sub-item.scss
@@ -1,5 +1,5 @@
-.menu {
-  .menu-sub-item__title {
+.menu-sub-item_ {
+  &_title {
     font-size: 14px;
     line-height: 17px;
     text-transform: uppercase;
@@ -10,23 +10,23 @@
     margin-bottom: 12px;
   }
 
-  .menu-sub-item__list {
+  &_list {
     padding-left: 12px;
   }
 
-  .menu-sub-item__item-link {
+  &_item-link {
     margin-top: 11px;
   }
 
-  .menu-sub-item__item-link:hover,
-  .menu-sub-item__item-link:active,
-  .menu-sub-item__item-link:focus {
+  &_item-link:hover,
+  &_item-link:active,
+  &_item-link:focus {
     cursor: pointer;
     outline: none;
     background-color: $pink-text;
   }
 
-  .menu__link {
+  &_menu__link {
     text-decoration: none;
     font-weight: normal;
     font-size: 14px;
@@ -34,9 +34,9 @@
     color: #6F6E6E;
   }
 
-  .menu-sub-item__item-link:hover .menu__link,
-  .menu-sub-item__item-link:active .menu__link,
-  .menu-sub-item__item-link:focus .menu__link {
+  &_item-link:hover &_menu__link,
+  &_item-link:active &_menu__link,
+  &_item-link:focus &_menu__link {
     color: $black;
   }
 }
