--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -138,3 +138,49 @@
         color: $white-text;
     }
 }
+
+@media (max-width: $tablet-width) {
+    .products {
+
+        &__text{
+            margin-bottom: 73px;
+        }
+
+        &__item {
+            max-width: 48%;
+        }
+
+        &__item-img {
+            width: 100%;
+            object-fit: cover;
+        }
+
+        &__button{
+            margin-bottom: 65px;
+        }
+    }
+}
+
+@media (max-width: $mobile-width) {
+    .products {
+
+        &__text{
+            margin-bottom: 64px;
+        }
+
+        &__item {
+            max-width: 100%;
+            margin-top: 16px;
+        }
+
+        &__item-img {
+            width: 100%;
+            object-fit: cover;
+        }
+
+        &__button{
+            margin-bottom: 65px;
+        }
+    }
+}
+
