--- a/scss/blocks/_registration.scss
+++ b/scss/blocks/_registration.scss
@@ -155,3 +155,61 @@
     background-size: 15px 15px;
   }
 }
+
+@media (max-width: $tablet-width) {
+  .registration {
+
+    &__pluses-title {
+      font-size: 16px;
+      line-height: 19px;
+      text-transform: uppercase;
+      padding-bottom: 32px;
+    }
+
+    &__form {
+      width: 50%;
+      margin-right: 22px;
+    }
+
+    &__pluses {
+      width: 50%;
+      padding-left: 10px;
+    }
+
+    &__pluses-text {
+      font-size: 16px;
+      line-height: 19px;
+      padding-bottom: 21px;
+    }
+
+    &__pluses-item {
+      position: relative;
+      font-size: 16px;
+      line-height: 19px;
+    }
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .registration {
+    &__wrap {
+      flex-direction: column;
+    }
+
+    &__form {
+      max-width: 100%;
+      width: 100%;
+      margin-right: 22px;
+    }
+
+    &__pluses {
+      width: 100%;
+      padding-left: 10px;
+      margin-bottom: 100px;
+    }
+
+    &__submit {
+      margin-bottom: 40px;
+    }
+  }
+}
