--- a/scss/blocks/_sales.scss
+++ b/scss/blocks/_sales.scss
@@ -1,7 +1,7 @@
 .sales {
 
     &__item {
-        width: 360px;
+        width: 30%;
         min-height: 260px;
         @include flex-center;
         flex-direction: column;
@@ -22,23 +22,33 @@
     }
 
     &__item--woman {
-        background-image: url('../img/for_woman.jpg');
+        background: url('../img/for_woman.jpg') no-repeat;
+        background-size: cover;
+        background-position: center top;
         margin-right: 30px;
-
     }
 
     &__item--man {
+        background: no-repeat;
         background-image: url('../img/for_man.jpg');
+        background-size: cover;
+        background-position: center top;
         margin-right: 30px;
     }
 
     &__item--kids {
+        background: no-repeat;
         background-image: url('../img/for_kids.jpg');
+        background-size: cover;
+        background-position: center top;
     }
 
     &__item--accesories {
         width: 100%;
+        background: no-repeat;
         background-image: url('../img/accesories.jpg');
+        background-size: cover;
+        background-position: center top;
         margin-top: 30px;
         margin-bottom: 96px;
     }
@@ -59,3 +69,46 @@
         text-transform: uppercase;
     }
 }
+
+@media (max-width: $tablet-width) {
+    .sales{
+        &item {
+            min-height: 167px;
+        }
+
+        &__item--woman,
+        &__item--man {
+            margin-right: 20px;
+        }
+
+        &__item--accesories {
+            margin-top: 20px;
+            margin-bottom: 154px;
+            min-height: 116px;
+        }
+    }
+}
+
+@media (max-width: $mobile-width) {
+    .sales{
+        &__item {
+            width: 100%;
+            min-height: 247px;
+        }
+
+        &__item--woman,
+        &__item--man,
+        &__item--kids,
+        &__item--accesories {
+            margin: 0;
+            padding: 0;
+            margin-bottom: 32px;
+        }
+
+        &__item--accesories {
+            min-height: 111px;
+            margin-bottom: 64px;
+        }
+    }
+}
+
