--- a/css/style.css
+++ b/css/style.css
@@ -942,7 +942,6 @@ body {
   height: 148px;
   background: #F8F3F4;
   display: flex;
-  margin-bottom: 64px;
 }
 .cart__title {
   align-self: center;
@@ -960,6 +959,7 @@ body {
   flex-direction: column;
   width: 50%;
   margin-top: 96px;
+  flex-grow: 1;
 }
 .cart__products_item {
   display: flex;
@@ -1022,6 +1022,7 @@ body {
   font-weight: 300;
   font-style: normal;
   color: #000000;
+  text-transform: uppercase;
 }
 .cart__products_button:hover, .cart__products_button:active, .cart__products_button:focus {
   cursor: pointer;
@@ -1029,6 +1030,91 @@ body {
   opacity: 0.5;
   background: #F1808F;
   color: #FFFFFF;
+}
+.cart__adress {
+  padding-left: 128px;
+  padding-top: 113px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+.cart__form-fieldset {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.cart__form-legend {
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 300;
+  font-style: normal;
+  color: #222222;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.cart__input {
+  width: 100%;
+  margin: 10px 0;
+  height: 44px;
+  border: 1px solid #A4A4A4;
+  padding-left: 16px;
+}
+.cart__adress_button {
+  background: #FFFFFF;
+  padding: 17px 40px;
+  border: 1px solid #A4A4A4;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 300;
+  font-style: normal;
+  color: #000000;
+  text-transform: uppercase;
+  margin-top: 14px;
+  margin-bottom: 57px;
+}
+.cart__adress_button:hover, .cart__adress_button:active, .cart__adress_button:focus {
+  cursor: pointer;
+  outline: none;
+  opacity: 0.5;
+  background: #F1808F;
+  color: #FFFFFF;
+}
+.cart__adress_total {
+  background: #F5F3F3;
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cart__adress_total_subtotal {
+  text-align: right;
+  font-size: 11px;
+  line-height: 13px;
+  color: #4A4A4A;
+  margin-bottom: 12px;
+}
+.cart__adress_total_grandtotal {
+  text-align: right;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+  margin-bottom: 21px;
+}
+.cart__adress_total_grandtotal-rate {
+  color: #F1808F;
+}
+.cart__adress_total-button {
+  background-color: #F1808F;
+  color: #FFFFFF;
+  border: 0;
+  padding: 15px 41px;
+  text-transform: uppercase;
+}
+.cart__adress_total-button:hover, .cart__adress_total-button:active, .cart__adress_total-button:focus {
+  cursor: pointer;
+  outline: none;
+  opacity: 0.5;
 }
 
 /*# sourceMappingURL=style.css.map */
