--- a/css/style.css
+++ b/css/style.css
@@ -1099,7 +1099,7 @@ body {
   font-size: 16px;
   line-height: 19px;
   color: #222222;
-  margin-bottom: 21px;
+  margin-bottom: 39px;
 }
 .cart__adress_total_grandtotal-rate {
   color: #F1808F;
@@ -1110,6 +1110,16 @@ body {
   border: 0;
   padding: 15px 41px;
   text-transform: uppercase;
+  position: relative;
+}
+.cart__adress_total-button:before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: #E2E2E2;
+  position: absolute;
+  top: -17px;
+  transform: translateX(-23%);
 }
 .cart__adress_total-button:hover, .cart__adress_total-button:active, .cart__adress_total-button:focus {
   cursor: pointer;
