--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,3 +11,4 @@
 @import './blocks/_registration.scss';
 @import "./blocks/_menu-sub-item.scss";
 @import "./blocks/_cart.scss";
+@import "./blocks/_product.scss";
