--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -3,6 +3,7 @@
     
     &__logo {
         margin: 0 41px 0 0;
+        transition: opacity 700ms;
     }
 
     &__logo:hover,
@@ -54,6 +55,7 @@
 
     &__icon{
         fill: #E8E8E8;
+        transition: fill 700ms;
     }
 
     &__button:hover,
@@ -111,6 +113,7 @@
     &__button:active +&__menu,
     &__button:focus +&__menu {
         display: block;
+        z-index: 1;
     }
 
     &-menu:hover {
@@ -123,6 +126,14 @@
         line-height: 17px;
         text-transform: uppercase;
         padding-top: 37px;
+    }
+}
+
+@media (max-width: $tablet-width) {
+    .header {
+        &__menu {
+            right: 0px;
+        }
     }
 }
 
