add translation to menu

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -96,7 +96,8 @@
     }
 
     &__menu {
-        display: none;
+        transform: translateY(-1200px);
+        transition: transform 0.7s;
         position: absolute;
         width: 232px;
         height: 764px;
@@ -112,6 +113,7 @@
     &__button:hover +&__menu,
     &__button:active +&__menu,
     &__button:focus +&__menu {
+        transform: translateX(0);
         display: block;
         z-index: 1;
     }
