--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,8 @@ body {
   align-items: center;
 }
 .header__menu {
-  display: none;
+  transform: translateY(-1200px);
+  transition: transform 0.7s;
   position: absolute;
   width: 232px;
   height: 764px;
@@ -169,6 +170,7 @@ body {
   box-shadow: -13px 13px 11px -7px rgba(34, 60, 80, 0.38);
 }
 .header__button:hover + .header__menu, .header__button:active + .header__menu, .header__button:focus + .header__menu {
+  transform: translateX(0);
   display: block;
   z-index: 1;
 }
